feat: start html fundamentals and created Id card

--- a/day-2/index.html
+++ b/day-2/index.html
@@ -5,13 +5,55 @@
     <title>Day 2 - HTML Fundamentals</title>
   </head>
   <body>
-    <h1>this is heading 1</h1>
-    <h2>this is heading 2</h2>
-    <h3>this is heading 3</h3>
-    <h4>this is heading 4</h4>
-    <h5>this is heading 5</h5>
-    <h6>this is heading 6</h6>
-    <p>This is a paragraph</p>
-    <a href="https://github.com/">This is a link</a>
+    <main>
+      <!-- Heading -->
+      <section>
+        <h1>this is heading 1</h1>
+        <h2>this is heading 2</h2>
+        <h3>this is heading 3</h3>
+        <h4>this is heading 4</h4>
+        <h5>this is heading 5</h5>
+        <h6>this is heading 6</h6>
+        <p>This is a paragraph</p>
+      </section>
+
+      <!-- Link -->
+      <section>
+        <a href="https://github.com/">This is a link</a><br /><br />
+        <img src="./public/images/group Photo.jpg" alt="group" width="500" />
+      </section>
+
+      <!-- List -->
+      <section>
+        <ol>
+          <li>This is first time</li>
+          <li>This is second time</li>
+          <li>This is third time</li>
+        </ol>
+        <ul>
+          <li>This is first time</li>
+          <li>This is second time</li>
+          <li>This is third time</li>
+        </ul>
+        <dl>
+          <dt>HTML</dt>
+          <dd>Hypertext Markup Language</dd>
+
+          <dt>CSS</dt>
+          <dd>Cascading Style Sheet</dd>
+
+          <dt>js</dt>
+          <dd>Javascript</dd>
+        </dl>
+      </section>
+
+      <!-- forms -->
+      <section>
+        <form>
+          <input type="text" />
+          <button>Submit</button>
+        </form>
+      </section>
+    </main>
   </body>
 </html>
