feat: Css Added

--- a/day-3/exercise.html
+++ b/day-3/exercise.html
@@ -5,8 +5,10 @@
     <link rel="stylesheet" href="exercise.css" />
   </head>
   <body>
-    <section class="id">
-      <h1>Pranav's ID</h1>
+    <div class="id_cont">
+      <div class="header">
+        <h1>Pranav's ID</h1>
+      </div>
 
       <img
         src="./public/images/Pranav a.jpeg"
@@ -14,21 +16,22 @@
         width="300"
         height="300"
       />
+      <div class="info">
+        <h3>Pranav Shrestha</h3>
 
-      <h3>Pranav Shrestha</h3>
+        <p><b>Gender:</b> male</p>
+        <p><b>Address:</b>Maphi,Kathmandu</p>
+        <p><b>Blood Group:</b>O+</p>
 
-      <p><b>Gender:</b> male</p>
-      <p><b>Address:</b>Maphi,Kathmandu</p>
-      <p><b>Blood Group:</b>O+</p>
+        <p>
+          <b>Email:</b>
+          <a href="mailto:pranavshin180@gmail.com">pranavshin180@gmail.com</a>
+        </p>
 
-      <p>
-        <b>Email:</b>
-        <a href="mailto:pranavshin180@gmail.com">pranavshin180@gmail.com</a>
-      </p>
-
-      <footer>
-        <p>@Copyright @2026</p>
-      </footer>
-    </section>
+        <footer>
+          <p>@Copyright @2026</p>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
