feat: Css fixed

--- a/day-3/exercise.html
+++ b/day-3/exercise.html
@@ -10,12 +10,11 @@
         <h1>Pranav's ID</h1>
       </div>
 
-      <img
-        src="./public/images/Pranav a.jpeg"
-        alt=""
-        width="300"
-        height="300"
-      />
+
+      <div class="id_img">
+        <img src="./public/images/Pranav a.jpeg" alt="" />
+      </div>
+
       <div class="info">
         <h3>Pranav Shrestha</h3>
 
