--- a/day-4/card.html
+++ b/day-4/card.html
@@ -1,22 +1,38 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>day 3 - CSS Basic</title>
+    <title>Personal Info:</title>
     <link rel="stylesheet" href="card.css" />
-    <style>
-      div p {
-        color: blue;
-        background-color: aqua;
-      }
-    </style>
   </head>
   <body>
-    <div style="color: antiquewhite; background-color: rgb(14, 212, 230)">
-      This is inline Styling
+    <div class="id_cont">
+      <div class="id">
+        <div class="header">
+          <h1>Pranav's ID</h1>
+        </div>
+
+        <div class="id_img">
+          <img src="./public/images/Pranav a.jpeg" alt="" />
+        </div>
+
+        <div class="info">
+          <h3>Pranav Shrestha</h3>
+
+          <p><b>Gender:</b> male</p>
+          <p><b>Address:</b>Maphi,Kathmandu</p>
+          <p><b>Blood Group:</b>O+</p>
+
+          <p>
+            <b>Email:</b>
+            <a href="mailto:pranavshin180@gmail.com">pranavshin180@gmail.com</a>
+          </p>
+
+          <footer>
+            <p>@Copyright @2026</p>
+          </footer>
+        </div>
+        
+      </div>
     </div>
-    <div><p>This is internal Styling</p></div>
-    <div class="container">This is external Styling</div>
   </body>
 </html>
