--- a/day-5/exercise.html
+++ b/day-5/exercise.html
@@ -24,7 +24,7 @@
         <input
           type="number"
           class="js-age-input"
-          placeholder="Enter your age"
+          placeholder="Enter your dogs age"
         />
         <button class="js-calculate-btn">Calculate</button>
         <p class="result-text js-result">Your dog age will appear here...</p>
